# pdf-summ-coxit

./: .dockerignore  .env.compose.example  .env.example  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  run.sh
assets/: model_list.json  model_providers.json  system_prompts.yaml
scripts/: install.sh
src/core/: args.py  fmt_output.py  globals.py  logger.py  main.py  pdf_document.py  pdf_processor.py  pdf_summarizer.py  pdf_watchdog.py  prompts.py  utils.py
src/core/summarizer/: step1.py  step2.py  summ_utils.py  summarizer.py
src/llm_completion/: completion.py  models.py  pyproject.toml
tests/: eval.py  expected.json  my_watchdog.py  test.py  utils.py
