[project]
name = "pdf-summ-coxit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "litellm>=1.60.8",
    "pypdf>=5.2.0",
    "termcolor>=2.5.0",
    "watchdog>=6.0.0",
]

[tool.uv.workspace]
members = [
    "src/core", "src/llm_completion",
]

[tool.uv.sources]
core = { workspace = true }
llm_completion = { workspace = true }
